# mouse_position

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: checks.yml
examples/: simple.rs
src/: error.rs  lib.rs  linux.rs  macos.rs  main.rs  windows.rs
src/linux/: wayland.rs  xorg.rs
src/linux/wayland/: dispatch.rs  state.rs
