[package]
name = "mouse_position"
authors = ["Fayez Nazzal"]
description = "Get the mouse position on Linux, Windows and MacOS"
repository = "https://github.com/fayez-nazzal/mouse_position"
keywords = ["mouse", "position", "linux", "windows", "macos"]
categories = ["gui"]
license = "MIT"
version = "0.1.3"
edition = "2021"

[dependencies]
thiserror = "1.0.56"

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2.20.1"
wayland-client = "0.31.2"
smithay-client-toolkit = "0.18.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23.1"
