[package]
name = "mouse_position"
authors = ["Fayez Nazzal"]
description = "Get the mouse position on Linux, Windows and MacOS"
repository = "https://github.com/fayez-nazzal/mouse_position"
keywords = ["mouse", "position", "linux", "windows", "macos"]
categories = ["gui"]
license = "MIT"
version = "0.1.3"
edition = "2021"

[dependencies]
tempfile = "3.14.0"
thiserror = "1.0.56"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
smithay-client-toolkit = "0.19.2"
x11-dl = "2.20.1"
wayland-client = "0.31.7"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23.1"
